# marx

./: .gitignore  COPYRIGHT  ChangeLog  INSTALL  MANIFEST  Makefile.am  NEWS  README  changes.txt  configure  configure.ac
.github/workflows/: .gitattributes  compile_marx.yml  complile_marx.yml
autoconf/: Makefile.in  configure.ac
data/: FORMAT.TXT  Makefile.in
data/acis/: README
data/caldb/: acisD1997-04-17qeN0006.fits  acisD1999-07-22subpixN0001_marx.fits  fixfef.sl  hetgD1996-11-01greffpr001N0007.fits
data/ea-mirror/: README
data/ea-mirror/src/: dump_ee.c
data/grating/: README  hetgmp1D1996-11-01marxsectorN0002.tbl  hetgmp3D1996-11-01marxsectorN0002.tbl  hetgmp4D1996-11-01marxsectorN0003.tbl  hetgmp6D1996-11-01marxsectorN0003.tbl  optical-constants.xray
data/hrc/: carbon.xray  gold.xray  hrc_i_geom.txt  hrc_s_geom.txt
data/hrma/: EKCHDOS04.rdb  EKCHDOS05.rdb  EKCHDOS06.rdb  README  ideal.rdb
data/ixo/: Si-ox_p200_th15_dc15_d6492.fits  ixoxms_qe.fits  mirror.csv  mkixogeff.sl  mkixoqe.sl  xgs_bi_ccdqe.fits
data/obs/: acis_i_obs.par  hrc_i_obs.par  hrc_s_obs.par
data/pixlib/: pix_corner_lsi.par
data/src/: Makefile  bdat2tbl.c
data/utils/: Makefile  marxpipe.c  mk_hrma_ea.sl  mkcontam.py  mkcontam.sl  mkcorr.sl  mksubpix.sl  run_mkarf.sh  viewfef.sl
doc/: Makefile.in  README  aimpoint.txt  dump.txt  parms.txt
doc/examples/user-source/: README  bremms.c  draine_halo.c  grayscale.c  grid.c  image.c  off-axis.c  point.c  user.h
doc/hrma/: JPH-19960304.txt  JWA-19960603.txt  LVS-19960614.txt  RJE-19961220.txt  TJG-19961007B.txt  TJG-19961007C.txt  WAP-19950929.txt  WAP-19961008.txt  WAP-19961108.txt  WAP-19970327.txt  fields.txt
jdfits/: COPYRIGHT  ChangeLog  Makefile.am  README  configure  configure.ac  jdfits.lis
jdfits/autoconf/: Makefile.in  aclocal.m4  configure.ac  configure.in
jdfits/src/: Makefile.in  _jdfits.h  btread.c  config.h  config.hin  copyfits.c  fits.c  fits2idl.c  fitsbin.c  fitscopy.c  fitsdump.c  fitsfmt.c  fitshdr.c  fitsheap.c  fitsio.c  fitsio.inc  fitsmisc.c  fitsuser.c  fitswbin.c  fitswrite.c  ieee.c  jdfits.h  julian.c  makefits.c  modules.lis  sysconf.c
jdmath/: .gitignore  AUTHORS  COPYRIGHT  ChangeLog  Makefile.am  README  configure  configure.ac  jdmath.lis
jdmath/autoconf/: Makefile.in  configure.ac  configure.in
jdmath/demo/: Makefile.in  binup.c  integ.c  nsort.c
jdmath/doc/: jdmath.tex  random.txt
jdmath/src/: Makefile.in  _jdmath.h  bdata.c  bilinear.c  binaryio.c  bisect.c  complex.c  config.hin  crout.c  dblas.c  dgelim.c  dinterpo.c  dreadcol.c  dsort.c  dynmem.c  erf.c  fftn-inc.c  fftn.c  finterpo.c  freadcol.c  fsort.c  gamma.c  gaussj.c  gaussrnd.c  gnuplot.c  hist.c  init.c  jdmath.h  levmrq.c  loggrid.c  machar.c  misc.c  modules.lis  nan.c  oromberg.c  polyint.c  qroot.c  random.c  romberg.c  rotate.c  (+3 more)
jdmath/src/test/: Makefile  matrix.c  test_vector.c
jdmath/test/: test_bisect.c  test_crout.c
libsrc/: Makefile.in  _marx.h  acis-i.c  acis-s.c  acis.h  acis_fef.c  acis_gain.c  acis_subpix.c  aciscontam.c  argcargv.h  caldb.c  config.hin  data.c  detpix.c  diffract.c  disperse.c  dither.c  drake.c  hrc-s.c  hrc.h  hrc_i_geom.c  hrcblur.c  hrma.c  interp.c  ixocatgs.c  ixoccd.c  ixoccd.h  ixoxms.c  marx-feat.h  marx.h  marxerr.c  mblur.c  parm.c  parm.h  prob.c  qefuns.c  reflect.c  s-beta.c  s-disk.c  s-gauss.c  (+10 more)
marx/: COPYRIGHT  ChangeLog  changes.txt  configure  marx.lis  marxlib.lis
marx-dist/autoconf/: Makefile.in  aclocal.m4
marx-dist/tools/idl/: get_hetg_spect.pro  get_letg_spect.pro
marx/autoconf/: Makefile  Makefile.in  configure.ac
marx/data/: Makefile.in  README  marxcaldb.par
marx/data/caldb/: acisD1997-04-17qeN0005.fits  acisD1997-04-17qeN0006.fits  acisD1999-07-22subpixN0001_marx.fits  acisD1999-08-13contamN0005_marx.fits  acisD1999-08-13contamN0006_marx.fits  acisD1999-08-13contamN0007_marx.fits  fixfef.sl  hetgD1996-11-01greffpr001N0004.fits  hetgD1996-11-01greffpr001N0005.fits  hetgD1996-11-01greffpr001N0006.fits  letgD1996-11-01greffpr001N0005.fits  letgD1996-11-01greffpr001N0007.fits  telD1999-07-23aimptsN0001.fits  telD1999-07-23aimptsN0002.fits  telD1999-07-23geomN0004.fits  telD1999-07-23geomN0005.fits  (+2 more)
marx/doc/: README  marx.html  parms.txt  source.tex  tma.txt
marx/libsrc/: Makefile.in  _marx.h  acis-i.c  acis-s.c  acis.h  acis_fef.c  acis_gain.c  acis_geom.c  acis_subpix.c  aciscontam.c  argcargv.c  argcargv.h  caldb.c  chandra.h  config.hin  data.c  detector.c  detpix.c  diffract.c  disperse.c  dither.c  drake.c  dump_ee.c  eamirror.c  ffield.c  fix_ee.c  grating.c  hrc-i.c  hrc-s.c  hrc.h  hrc_i_geom.c  hrc_s_geom.c  hrma.c  interp.c  ixocatgs.c  ixoccd.c  ixoccd.h  ixomirror.c  ixoxms.c  marx-feat.h  (+33 more)
marx/par/: marx.par  marx_xrcf.par  marxasp.par  marxixo.par  pileup.par
marx/src/: Makefile.in  acis-qe.c  acissim.c  acissim.h  bestfocus.c  detinfo.c  dumpwfold.c  geff.c  geffdump.c  henke.c  henke.h  marx.c  marx2dpde.c  marx2fits.c  marx2img.c  marxasp.c  marxcat.c  marxpileup.c  pileup.c  rfl.c  sky2chip.c  testmarx.sh
marxrsp/: Makefile  cfits.c  marx2fits.c  marxrsp.c  marxrsp.lis  rsp.c  rspdump.c
par/: leg.par  marx.par  marx.par.in  marx_xrcf.par  marxasp.par  marxasp.par.in  marxixo.par  marxpileup.par  marxpileup.par.in  meg.par
pfile/: COPYRIGHT  ChangeLog  Makefile.am  changes.txt  configure  configure.ac  pfile.lis
pfile/autoconf/: Makefile.in  aclocal.m4  configure.ac
pfile/src/: Makefile.in  _pfile.h  config.hin  modules.lis  parameter.h  paramfile.h  pf.c  pfcmd.c  pfcmpt.c  pfile.c  pfile.h  pfmisc.c  pfquery.c  pftable.c  plist.c  pset.c  pwhich.c  sysconf.h  test.c
rsp/: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  argcargv.c  argcargv.h  configure.ac  marxrsp.c  rspdump.c
rsp/src/: cfits.h
src/: Makefile.in  acis-qe.c  acissim.c  acissim.h  bestfocus.c  detinfo.c  geff.c  geffdump.c  henke.h  marx.c  marx2dpde.c  marx2fits.c  marx2img.c  marxasp.c  marxcat.c  marxpileup.c  rfl.c  sky2chip.c
tools/idl/: make_image.pro  read_marx_file.pro  tg_extract.pro
tools/scripts/: marxflux  xspec2marx
(+46 files in other folders)
