AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = -I build-aux

lib_LIBRARIES = libpfile.a
include_HEADERS = src/pfile.h

libpfile_a_SOURCES = \
src/_pfile.h \
src/parameter.h \
src/pf.c \
src/pfcmd.c \
src/pfcmpt.c \
src/pfile.c \
src/pfmisc.c \
src/pfquery.c \
src/pftable.c

# To-Do  add possibility to install plist, pset, pwhich
